# browser_voxel_world

./: .gitignore  API.md  LICENSE  README.md  materials.py  pyproject.toml  schematic_import.py  server.py  worldgen.py
objects/: chain.txt  glass_pane.txt  iron_bars.txt  iron_trapdoor.txt  ladder.txt  lantern.txt  oak_door.txt  oak_fence.txt  oak_stairs.txt  pole.txt  stone_button.txt  stone_pressure_plate.txt  stone_slab.txt  torch.txt
static/: index.html
static/js/: fluids.js  inflate.js  lighting.js  main.js  markdown.js  nbt.js  schematic.js  screens.js
